Add production env

--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js"
+    "start": "NODE_ENV=production && node ./index.js",
+    "dev": "SET NODE_ENV=development && nodemon ./index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^12.0.4",
     "express": "^4.17.2",
     "mongoose": "^6.1.5",
     "nodemon": "^2.0.15"
