--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "type": "module",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "NODE_ENV=production && node ./index.js",
-    "dev": "SET NODE_ENV=development && nodemon ./index.js"
+    "dev": "SET NODE_ENV=development && nodemon ./index.js",
+    "deploy": "cd ../ && git subtree --prefix server push heroku main"
   },
   "author": "",
   "license": "ISC",
